--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,6 +1,9 @@
 .intro__text {
    max-width: 690px;
-   margin: 40px 0 33px;
+   padding: 0;
+   padding-bottom: 33px;
+   /* margin: 40px 0 33px; */
+   margin: 0;
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
@@ -9,13 +12,13 @@
  
  @media screen and (max-width: 768px) {
    .intro__text {
-     max-width: 93.75%;
+     /* max-width: 93.75%; */
    }
  }
  
  @media screen and (max-width: 320px) {
    .intro__text {
-     margin: 12.5vw 0 9.4vw;
+     /* margin: 12.5vw 0 9.4vw; */
      max-width: 100%;
      font-size: 5vw;
    }
