--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,20 +1,23 @@
 .intro__title {
    max-width: 690px;
+   margin: 0;
    margin-top: 92px;
    font-style: normal;
    font-weight: 900;
    font-size: 54px;
    line-height: 1.07;
+   padding-bottom: 40px;
  }
  
  @media screen and (max-width: 768px) {
    .intro__title {
-     max-width: 93.75%;
+     /* max-width: 93.75%; */
    }
  }
  
  @media screen and (max-width: 320px) {
    .intro__title {
+     margin-top: 64px;
      max-width: 100%;
      font-size: 10vw;
      line-height: 1.05;
