--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,6 @@
 .intro {
    max-width: 984px;
-   margin: 0 auto 92px;
+   margin: 92px auto;
  }
  
  @media screen and (max-width: 1280px) {
@@ -24,7 +24,7 @@
  
  @media screen and (max-width: 320px) {
    .intro {
-     max-width: 90%;
+     max-width: 90%; 
      margin: 0 5% 20%;
    }
  }
