--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,20 +4,20 @@
    align-items: center;
    width: calc(100% - 148px * 2);
    margin: 0;
-   padding: 56px 148px 0 148px;
+   padding: 0 148px 0 148px;
 }
 
 @media screen and (max-width: 1279px) {
    .lead {
        width: calc(100% - 48px * 2);
-       padding: 48px 48px 0 48px;
+       padding: 0 48px 0 48px;
    }
 }
 
 @media screen and (max-width: 1023px) {
    .lead {
        width: 100%;
-       padding: 48px 0 0 0;
+       padding: 0 0 0 0;
    }
 }
 
