--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,25 +1,24 @@
 .place__title {
-   grid-row: 1;
    margin: 0;
-   max-width: 100%;
+   max-width: 460px;
    font-style: normal;
    font-weight: 900;
    font-size: 72px;
    line-height: 1.06;
  }
  
- @media screen and (max-width: 768px) {
+ @media screen and (max-width: 1023px) {
    .place__title {
-     font-size: 5.5vw;
+     font-size: 42px;
      line-height: 1.1;
    }
  }
  
- @media screen and (max-width: 320px) {
+ @media screen and (max-width: 767px) {
    .place__title {
      margin: 0 5%;
-     max-width: 90%;
-     font-size: 10vw;
+     /* max-width: 90%; */
+     font-size: 32px;
      line-height: 1.09;
    }
  }
