--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,7 +1,7 @@
 .place {
    margin: 0 auto 80px;
    display: grid;
-   grid-template-columns: fit-content(460px) fit-content(484px);
+   grid-template-columns: 460px 1fr;
    grid-template-rows: auto;
    gap: 48px 40px;
  }
@@ -10,26 +10,26 @@
    margin-bottom: 0;
  }
  
- @media screen and (max-width: 1024px) {
+ @media screen and (max-width: 1279px) {
    .place {
-     grid-template-columns: fit-content(440px) fit-content(456px);
+     grid-template-columns: 440px 1fr;
      column-gap: 32px;
    }
  }
  
- @media screen and (max-width: 768px) {
+ @media screen and (max-width: 1023px) {
    .place {
      margin: 0 auto 73px;
-     grid-template-columns: fit-content(340px) fit-content(352px);
+     grid-template-columns: 340px 1fr;
      column-gap: 28px;
    }
  }
  
- @media screen and (max-width: 320px) {
+ @media screen and (max-width: 767px) {
    .place {
      max-width: 100%;
      margin: 0 auto 50px;
-     grid-template-columns: repeat(1, fit-content(320px));
+     grid-template-columns: 1fr;
      row-gap: 32px;
    }
  }
